# wahl-chat-backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  NOTICE  README.md  poetry.lock.license  pyproject.toml
.github/workflows/: NOTE.md  dev-wahl-chat-api-AutoDeployTrigger-59105f3d-c111-4390-8b9d-b650fbfd234b.yml  prod-wahl-chat-api-AutoDeployTrigger-99a452a9-54d4-4742-aea0-aaba78b5b991.yml
data/scripts/: add_additional_data.ipynb  delete_vector_store_data.py  generate_db.ipynb  scrape_voting_behavior.ipynb  script_utils.py  vector_store_requests.ipynb  vector_store_voting_behavior.ipynb
firebase/: .firebaserc  .gitignore  firebase.json  firestore.rules  storage.rules
firebase/firestore_data/dev/: parties.json  proposed_questions.json
firebase/firestore_data/prod/: parties.json
firebase/functions/: .gitignore  main.py  models.py  requirements.txt
firebase/storage_data/public/: NOTE.md
src/: aiohttp_app.py  chatbot_async.py  firebase_service.py  llms.py  prompts.py  utils.py  vector_store_helper.py  websocket_app.py
src/models/: chat.py  dtos.py  general.py  party.py  structured_outputs.py  vote.py
tests/: test_websocket_app.py
